tests/conc/reject/parfor_push.hi
fn main():
    xs := [1, 2, 3]
    parallel for i in range(3):
        push(xs, i)
